--- a/contrib/Dockerfile.test
+++ b/contrib/Dockerfile.test
@@ -8,7 +8,7 @@ FROM golang:1.20-alpine AS build-env
 ENV PACKAGES curl make git libc-dev bash gcc linux-headers eudev-dev python3
 
 # Set working directory for the build
-WORKDIR /go/src/github.com/govgen/govgen
+WORKDIR /go/src/github.com/atomone-hub/govgen
 
 # Add source files
 COPY . .
